--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,15 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		
+		<mybatis.version>1.3.0</mybatis.version>
+        <druid.version>1.1.10</druid.version>
+        <junit.version>4.12</junit.version>
+        <sharding.jdbc.version>3.0.0</sharding.jdbc.version>
 	</properties>
 
 	<modules>
 		<module>springboot-sharding-jdbc3-dangdang</module>
+		<module>springboot-sharding-jdbc3-apache</module>
 	</modules>
 </project>
