--- a/pom.xml
+++ b/pom.xml
@@ -28,5 +28,7 @@
 	<modules>
 		<module>springboot-sharding-jdbc3-dangdang</module>
 		<module>springboot-sharding-jdbc3-apache</module>
+		<module>springboot-sharding-jdbc3-apache-examples1</module>
+		<module>springboot-sharding-jdbc3-apache-examples2</module>
 	</modules>
 </project>
