--- a/springboot-sharding-jdbc3-apache-examples1/.gitignore
+++ b/springboot-sharding-jdbc3-apache-examples1/.gitignore
@@ -21,3 +21,32 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+
+.gradle
+/build/
+!gradle/wrapper/gradle-wrapper.jar
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.class
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+nbproject/private/
+build/
+bin/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
