--- a/pom.xml
+++ b/pom.xml
@@ -30,5 +30,7 @@
 		<module>springboot-sharding-jdbc3-apache</module>
 		<module>springboot-sharding-jdbc3-apache-examples1</module>
 		<module>springboot-sharding-jdbc3-apache-examples2</module>
+		<module>springboot-sharding-jdbc3-apache-examples3-rpc</module>
+		<module>springboot-sharding-jdbc3-keygen</module>
 	</modules>
 </project>
