--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 # Compiled class file
 *.class
-target
-work
 
 # Log file
 *.log
@@ -23,3 +21,34 @@ work
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+
+.gradle
+/build/
+!gradle/wrapper/gradle-wrapper.jar
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.class
+target
+work
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+nbproject/private/
+build/
+bin/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
